--- a/smallpt.html
+++ b/smallpt.html
@@ -34,30 +34,21 @@ body{
     sandbox.addTexture({ "internalformat": "RGBA32F" }, "ratts");
 
     //------------------------- Shaders -------------------------
-    let vertex_shader = sandbox.addShader("vert.glsl", true, "vertex_shader");
-    let frag_shader = sandbox.addShader("smallpt.glsl", false, "pt_shader");
-    let display_shader = sandbox.addShader("display.glsl", false, "display_shader");
-    
+    sandbox.addShader("vert.glsl", true, "vertex_shader");
+    sandbox.addShader("smallpt.glsl", false, "pt_shader");
+    sandbox.addShader("display.glsl", false, "display_shader");
+
     //------------------------- RayTracing Program -------------------------
     sandbox.addProgram([
       sandbox.shaders["vertex_shader"], 
       sandbox.shaders["pt_shader"] 
     ], "raytracing");
 
-    sandbox.programs["raytracing"].addUniform("u_acc", "1i");
-    sandbox.programs["raytracing"].setUniform("u_acc", 0);
-
-    sandbox.programs["raytracing"].addUniform("u_mask", "1i");
-    sandbox.programs["raytracing"].setUniform("u_mask", 1);
-
-    sandbox.programs["raytracing"].addUniform("u_ro", "1i");
-    sandbox.programs["raytracing"].setUniform("u_ro", 2);
-
-    sandbox.programs["raytracing"].addUniform("u_rd", "1i");
-    sandbox.programs["raytracing"].setUniform("u_rd", 3);
-
-    sandbox.programs["raytracing"].addUniform("u_ratts", "1i");
-    sandbox.programs["raytracing"].setUniform("u_ratts", 4);
+    sandbox.programs["raytracing"].addUniform("u_acc"   , "1i", 0);
+    sandbox.programs["raytracing"].addUniform("u_mask"  , "1i", 1);
+    sandbox.programs["raytracing"].addUniform("u_ro"    , "1i", 2);
+    sandbox.programs["raytracing"].addUniform("u_rd"    , "1i", 3);
+    sandbox.programs["raytracing"].addUniform("u_ratts" , "1i", 4);
 
     //------------------------- Display Program -------------------------
     sandbox.addProgram([
@@ -65,11 +56,8 @@ body{
         sandbox.shaders["display_shader"]
       ], "display" );
 
-    sandbox.programs["display"].addUniform("u_cont", "1f");
-    sandbox.programs["display"].setUniform("u_cont", 1);
-
-    sandbox.programs["display"].addUniform("u_tex", "1i");
-    sandbox.programs["display"].setUniform("u_tex", 0);
+    sandbox.programs["display"].addUniform("u_cont" , "1f", 1);
+    sandbox.programs["display"].addUniform("u_tex"  , "1i", 0);
 
     //------------------------- Render Loop -------------------------
     let frame = 1;
@@ -78,11 +66,11 @@ body{
 
       sandbox.program = "raytracing";
 
-      sandbox.setTexture(0, "u_acc", sandbox.textures["acc"].tex);
-      sandbox.setTexture(1, "u_mask", sandbox.textures["mask"].tex);
-      sandbox.setTexture(2, "u_ro", sandbox.textures["ro"].tex);
-      sandbox.setTexture(3, "u_rd", sandbox.textures["rd"].tex);
-      sandbox.setTexture(4, "u_ratts", sandbox.textures["ratts"].tex);
+      sandbox.setTexture("u_acc",   sandbox.textures["acc"].tex,    0);
+      sandbox.setTexture("u_mask",  sandbox.textures["mask"].tex,   1);
+      sandbox.setTexture("u_ro",    sandbox.textures["ro"].tex,     2);
+      sandbox.setTexture("u_rd",    sandbox.textures["rd"].tex,     3);
+      sandbox.setTexture("u_ratts", sandbox.textures["ratts"].tex,  4);
 
       sandbox.gl.bindFramebuffer(sandbox.gl.DRAW_FRAMEBUFFER, fb.fb);
       fb.setTexture(0, fb.t0);
@@ -96,7 +84,7 @@ body{
       sandbox.program = "display";
 
       sandbox.programs["display"].setUniform("u_cont", 1.0 / frame);
-      sandbox.setTexture(0, "u_tex", fb.t0);
+      sandbox.setTexture("u_tex", fb.t0, 0);
 
       sandbox.gl.bindFramebuffer(sandbox.gl.DRAW_FRAMEBUFFER, null);
       sandbox.draw();
