Harness the power of the new nWGL.m_draw function

--- a/smallpt.html
+++ b/smallpt.html
@@ -60,34 +60,36 @@ body{
     sandbox.programs["display"].addUniform("u_tex"  , "1i", 0);
 
     //------------------------- Render Loop -------------------------
-    let frame = 1;
     (function render() {
       stats.begin();
 
-      sandbox.program = "raytracing";
+      sandbox.m_draw([
+        function(){
+          sandbox.program = "raytracing";
 
-      sandbox.setTexture("u_acc",   sandbox.textures["acc"].tex,    0);
-      sandbox.setTexture("u_mask",  sandbox.textures["mask"].tex,   1);
-      sandbox.setTexture("u_ro",    sandbox.textures["ro"].tex,     2);
-      sandbox.setTexture("u_rd",    sandbox.textures["rd"].tex,     3);
-      sandbox.setTexture("u_ratts", sandbox.textures["ratts"].tex,  4);
+          sandbox.setTexture("u_acc", sandbox.textures["acc"].tex, 0);
+          sandbox.setTexture("u_mask", sandbox.textures["mask"].tex, 1);
+          sandbox.setTexture("u_ro", sandbox.textures["ro"].tex, 2);
+          sandbox.setTexture("u_rd", sandbox.textures["rd"].tex, 3);
+          sandbox.setTexture("u_ratts", sandbox.textures["ratts"].tex, 4);
 
-      sandbox.bindFramebuffer(fb.fb);
-      fb.setTexture(0, fb.t0);
-      fb.setTexture(1, fb.t1);
-      fb.setTexture(2, fb.t2);
-      fb.setTexture(3, fb.t3);
-      fb.setTexture(4, fb.t4);
+          sandbox.bindFramebuffer(fb.fb);
+          fb.setTexture(0, fb.t0);
+          fb.setTexture(1, fb.t1);
+          fb.setTexture(2, fb.t2);
+          fb.setTexture(3, fb.t3);
+          fb.setTexture(4, fb.t4);
+        },
 
-      sandbox.draw();
+        function(){
+          sandbox.program = "display";
 
-      sandbox.program = "display";
+          sandbox.uniform("u_cont", 1.0 / (sandbox.frame+1));
+          sandbox.setTexture("u_tex", fb.t0, 0);
 
-      sandbox.uniform("u_cont", 1.0 / frame);
-      sandbox.setTexture("u_tex", fb.t0, 0);
-
-      sandbox.bindFramebuffer(null);
-      sandbox.draw();
+          sandbox.bindFramebuffer(null);
+        }
+      ]);
 
       // texture ping pong
       sandbox.textures["acc"].swap(fb.textures[0]);
@@ -95,9 +97,6 @@ body{
       sandbox.textures["ro"].swap(fb.textures[2]);
       sandbox.textures["rd"].swap(fb.textures[3]);
       sandbox.textures["ratts"].swap(fb.textures[4]);
-
-      // increment frame by 1
-      frame++;
 
       window.requestAnimationFrame(render);
 
