--- a/smallpt.html
+++ b/smallpt.html
@@ -19,7 +19,7 @@ body{
 
     const WIDTH = window.innerWidth, HEIGHT = window.innerHeight;
 
-    let sandbox = new nWGL.main({ "width": WIDTH, "height": HEIGHT });
+    let sandbox = new nWGL.main({ "enableFloatEXT": true, "width": WIDTH, "height": HEIGHT });
 
     //------------------------- Framebuffers -------------------------
     let fb = sandbox.addFrameBuffer({ "internalformat": ["RGBA32F", "RGBA32F", "RGBA32F", "RGBA32F", "RGBA32F"], "totalBuffers": 5 }, "backbuffer");
@@ -63,33 +63,39 @@ body{
     (function render() {
       stats.begin();
 
-      sandbox.m_draw([
-        function(){
-          sandbox.program = "raytracing";
+      sandbox.m_draw(
+        new nWGL.pass(sandbox, 
+        [
+          {
+            "call": function(){            
+              sandbox.program = "raytracing";
 
-          sandbox.setTexture("u_acc", sandbox.textures["acc"].tex, 0);
-          sandbox.setTexture("u_mask", sandbox.textures["mask"].tex, 1);
-          sandbox.setTexture("u_ro", sandbox.textures["ro"].tex, 2);
-          sandbox.setTexture("u_rd", sandbox.textures["rd"].tex, 3);
-          sandbox.setTexture("u_ratts", sandbox.textures["ratts"].tex, 4);
+              sandbox.setTexture("u_acc", sandbox.textures["acc"].tex, 0);
+              sandbox.setTexture("u_mask", sandbox.textures["mask"].tex, 1);
+              sandbox.setTexture("u_ro", sandbox.textures["ro"].tex, 2);
+              sandbox.setTexture("u_rd", sandbox.textures["rd"].tex, 3);
+              sandbox.setTexture("u_ratts", sandbox.textures["ratts"].tex, 4);
 
-          sandbox.bindFramebuffer(fb.fb);
-          fb.setTexture(0, fb.t0);
-          fb.setTexture(1, fb.t1);
-          fb.setTexture(2, fb.t2);
-          fb.setTexture(3, fb.t3);
-          fb.setTexture(4, fb.t4);
-        },
+              sandbox.bindFramebuffer(fb.fb);
+              fb.setTexture(0, fb.t0);
+              fb.setTexture(1, fb.t1);
+              fb.setTexture(2, fb.t2);
+              fb.setTexture(3, fb.t3);
+              fb.setTexture(4, fb.t4);
+            }
+          },
+          {
+            "call": function(){
+              sandbox.program = "display";
 
-        function(){
-          sandbox.program = "display";
+              sandbox.uniform("u_cont", 1.0 / (sandbox.frame+1));
+              sandbox.setTexture("u_tex", fb.t0, 0);
 
-          sandbox.uniform("u_cont", 1.0 / (sandbox.frame+1));
-          sandbox.setTexture("u_tex", fb.t0, 0);
-
-          sandbox.bindFramebuffer(null);
-        }
-      ]);
+              sandbox.bindFramebuffer(null);
+            }
+          }
+        ])
+      );
 
       // texture ping pong
       sandbox.textures["acc"].swap(fb.textures[0]);
