--- a/smallpt.html
+++ b/smallpt.html
@@ -10,6 +10,22 @@ body{
 <body>
   <script src="external/stats.min.js"></script>
   <script src="nWGL/nWGL.js"></script>
+  <script>
+    function GetURLParameter(sParam){
+      var sPageURL = window.location.search.substring(1);
+      var sURLVariables = sPageURL.split('&');
+      for (var i = 0; i < sURLVariables.length; i++) 
+      {
+          var sParameterName = sURLVariables[i].split('=');
+          if (sParameterName[0] == sParam) 
+          {
+              return sParameterName[1];
+          }
+      }
+
+      return null;
+    }
+  </script>
   <script src="smallpt.js"></script>
 </body>
 
